manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cloudsample 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsample
  template:
    metadata:
      labels:
        app: cloudsample 
    spec:
      containers:
        - name: cloudsample 
          image: cepgstapacr.azurecr.io/cloudsample
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /mnt/cloud-sample
            name: cloud-sample-volume
            readOnly: false
            subPath: cloud-sample
          - mountPath: /application.yaml
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: cloud-sample-volume
        persistentVolumeClaim:
          claimName: cepg-aa-std-pvc
      - name: application-properties
        configMap:
          name: cloud-sample-configmap
          items:
            - key: application.yaml
              path: application.yaml
          defaultMode: 420
