manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: cloudsample
spec:
    ports:
    - port: 8080 
    selector:
        app: cloudsample
